manifests/northpole/gifttrack-v2/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gifttrack-v2
  namespace: northpole 
  labels:
    app: gifttrack-v2
spec:
  to:
    kind: Service
    name: gifttrack-v2-service
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
